--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>The Story Begin</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" type="image/png" href="https://i.ibb.co/vcz3Dbq/12.png">
 </head>
