--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Story Begin</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" type="image/png" href="https://i.ibb.co/vcz3Dbq/12.png">
